--- a/evelyn.css
+++ b/evelyn.css
@@ -75,3 +75,38 @@ html, h1 {
   flex-direction: row;
   margin-top: 50px;
 }
+
+/* question 4 */
+#Q4 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+#Q4_top {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: pink;
+
+}
+#match1 {
+  max-width: 300px;
+}
+
+#match2 {
+  max-width: 400px;
+}
+#Q4_bottom {
+  display: flex;
+  width: 800px;
+  height: 200px;
+  background-color: pink;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+}
