--- a/evelyn.css
+++ b/evelyn.css
@@ -32,10 +32,8 @@ body, html {
   position: relative;
 }
 html, h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 50px;
+  display: inline;
+  width: 250px;
 }
 
 /* question 1 */
@@ -92,12 +90,10 @@ html, h1 {
   justify-content: center;
   align-items: center;
   background-color: pink;
-
 }
 #match1 {
   max-width: 300px;
 }
-
 #match2 {
   max-width: 400px;
 }
@@ -109,4 +105,125 @@ html, h1 {
   margin-top: 50px;
   align-items: center;
   justify-content: center;
+}
+
+/* question 5 */
+#Q5 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+#Q5_top {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: lightblue;
+}
+#Q5_bottom {
+  display: flex;
+  width: 800px;
+  height: 200px;
+  background-color: lightblue;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+}
+#q5images {
+  display: flex;
+}
+#whitecat, #blackcat {
+max-width: 300px;
+margin: -30px -50px -50px -50px; 
+}
+
+/* Question 7 */
+#Q7 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+#Q7_top {
+  display: flex;
+  flex-direction: row;
+  width: 800px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgoldenrodyellow;
+}
+#Q7_bottom {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 200px;
+  background-color: lightgoldenrodyellow;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+}
+#q7left, #q7right {
+  width: 400px;
+  height: 600px;
+  /* border: black 1px solid; */
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 50px;
+}
+#girl {
+  max-width:450px;
+  margin-top: -50px;
+}
+#boy {
+  max-width: 300px;
+}
+
+/* Question 8 */
+#Q8 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+#Q8_top {
+  display: flex;
+  flex-direction: row;
+  width: 800px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgreen;
+}
+#Q8_bottom {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 200px;
+  background-color: lightgreen;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+}
+#q8left, #q8right {
+  width: 400px;
+  height: 600px;
+  /* border: black 1px solid; */
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 50px;
+}
+#bird, #turtle {
+  max-width:600px;
+  margin: -50px;
 }
