--- a/yunyun_footer.css
+++ b/yunyun_footer.css
@@ -30,11 +30,6 @@ html body{
     align-items: center;
     width: 150px;
 }
-/* #footer_copyright{
-    display: flex;
-  height: 100%;
-}
 #footer_copyright span{
-    display: inline-block;
-    align-self: flex-end;
-} */
+    bottom: 0;
+}
