--- a/answer.css
+++ b/answer.css
@@ -2,11 +2,14 @@
 max-width:100px;
 }
 #answer_key {
-  background-color: #4CC9FF;
+  border: 5px solid #4CC9FF;
   width: 400px;
   height: 200px;
   margin-top: 25px;
   margin-bottom: 25px;
   border-radius: 15px;
   padding: 15px;
+}
+.type6 p {
+  font-size: 20px;
 }
