--- a/answer.css
+++ b/answer.css
@@ -5,10 +5,10 @@ max-width:100px;
   border: 5px solid #4CC9FF;
   width: 400px;
   height: 200px;
-  margin-top: 25px;
-  margin-bottom: 25px;
   border-radius: 15px;
-  padding: 15px;
+  padding: 10px;
+  padding-top: 10px;
+  margin: 15px 0 10px 0;
 }
 .type6 p {
   font-size: 20px;
