--- a/footer.css
+++ b/footer.css
@@ -6,7 +6,8 @@
   position: absolute;
   color: #ff764c;
   font-size: 120%;
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  bottom: 0;
 }
 
 #footer_us {
